# mimiclaw

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  circular_strip.c  circular_strip.h  font.c  font.h  font_loader.h  idf_component.yml  lcd.c  lcd.h  mimi.c  mimi_config.h  tfcard.c  tfcard.h
main/agent/: agent_loop.c  context_builder.c
main/channels/feishu/: feishu_bot.c
main/k10_ui/: page_conf.c  page_conf.h  page_local.c  page_notice.c  page_online.c
main/k10_ui/data/: device_data.c  device_data.h  device_data_json.c  device_data_json.h
main/llm/: llm_proxy.c
main/onboard/: wifi_onboard.c
main/pic_decoder/gif/: README.md  lvgl_gif.c  lvgl_gif.h
main/pic_decoder/jpg/: image_to_jpeg.c  image_to_jpeg.h  jpeg_to_image.c  jpeg_to_image.h
main/proxy/: https_lane.c  https_lane.h
main/tools/: tool_notice.c  tool_notice.h  tool_registry.c  tool_web_search.c  tool_ws2812.c  tool_ws2812.h
openclaw_skills_channels/: README.md  SKILL.md  desktop_pet_skill.py  push_helper.py
openclaw_skills_channels/qqbot/: package-lock.json
openclaw_skills_channels/qqbot/src/: channel.ts  gateway.ts  proactive.ts
openclaw_skills_channels/qqbot/src/utils/: desktop-pet-webhook.ts
sdcard/skills/: feishu-notice.md
spiffs_data/skills/: ws2812-control.md
